--- a/drupal/profiles/creative/themes/custom/creative/scss/style.scss
+++ b/drupal/profiles/creative/themes/custom/creative/scss/style.scss
@@ -1,8 +1,12 @@
 @import 'variables', 'mixins', 'normalize';
+@import 'layouts/footer', 'layouts/header', 'layouts/content';
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
+@import url(http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic);
 
 body {
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
   background: url('../images/bg.jpg') no-repeat center center fixed;
   @include vendor-prefixes(background-size, cover, webkit, moz, o);
 }
