--- a/drupal/profiles/creative/themes/custom/creative/scss/_variables.scss
+++ b/drupal/profiles/creative/themes/custom/creative/scss/_variables.scss
@@ -1,9 +1,12 @@
+$default-text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
+
 // ================================== SCREEN RESOLUTION ===================================
 $breakpoints: (
   big-desktop: 1200px,
   desktop: 992px,
-  tablet: 768,
+  tablet: 768px,
   mobile: 480px,
 );
 
 // ================================== COLORS ===================================
+$background: rgba(255, 255, 255,.9);
