--- a/drupal/profiles/creative/themes/custom/creative/scss/layouts/_footer.scss
+++ b/drupal/profiles/creative/themes/custom/creative/scss/layouts/_footer.scss
@@ -1,8 +1,6 @@
 footer {
-  background: rgba(255, 255, 255,.9);
+  background: $background;
   .wrapper {
-    padding: 0 15px;
-    margin: 0 auto;
     p {
       margin: 0;
       padding: 50px 0;
