--- a/drupal/profiles/creative/themes/custom/creative/scss/layouts/_header.scss
+++ b/drupal/profiles/creative/themes/custom/creative/scss/layouts/_header.scss
@@ -1,14 +1,13 @@
 header {
+  @include font(18px, false, 400);
   .site-title {
     display: block;
     margin: 0;
     padding: 30px 0 10px;
     text-align: center;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, .5);
+    text-shadow: $default-text-shadow;
     font-family: "Josefin Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 70px;
-    font-weight: 700;
-    line-height: normal;
+    @include font(70px, normal, 700);
     color: #fff;
   }
   .contact--minimized {
@@ -17,17 +16,35 @@ header {
       margin: 0;
       padding: 0 0 40px;
       text-align: center;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+      text-shadow: $default-text-shadow;
       text-transform: uppercase;
-      font-size: 1.25em;
-      font-weight: 400;
+      font-style: normal;
       letter-spacing: 3px;
       color: #fff;
     }
   }
-  nav {
-    margin: 0 auto;
-    padding: 0 15px;
-    background: rgba(255, 255, 255, .9);
+  .mobile-menu-wrapper {
+    margin-bottom: 20px;
+    background: $background;
+    ul {
+      display: table;
+      float: none;
+      margin: 0 auto;
+      table-layout: fixed;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+    }
+    li {
+      float: left;
+      a {
+        display: block;
+        padding: 35px;
+        text-decoration: none;
+        color: #777;
+        &:hover {
+          color: #333;
+        }
+      }
+    }
   }
 }
