--- a/drupal/profiles/creative/themes/custom/creative/scss/style.scss
+++ b/drupal/profiles/creative/themes/custom/creative/scss/style.scss
@@ -1,16 +1,31 @@
-@import 'variables', 'mixins', 'normalize';
-@import 'layouts/footer', 'layouts/header', 'layouts/content';
+@import 'variables',
+        'mixins',
+        'normalize';
+
+@import 'layouts/footer',
+        'layouts/header',
+        'layouts/content';
+
+@import 'parts/tabs';
+
+@import 'pages/user';
 
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800);
 @import url(http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic);
 
 body {
+  width: 100%;
+  height: 100%;
+  display: table;
+  table-layout: fixed;
   font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 14px;
   background: url('../images/bg.jpg') no-repeat center center fixed;
   @include vendor-prefixes(background-size, cover, webkit, moz, o);
 }
-
+* {
+  @include vendor-prefixes(box-sizing, border-box, webkit, moz)
+}
 .clearfix {
   &:before,
   &:after {
@@ -22,7 +37,24 @@ body {
     clear: both;
   }
 }
-
+.container {
+  padding: 0 15px;
+  margin: 0 auto;
+  @include breakpoint((from: tablet)) {
+    width: 750px;
+  }
+  @include breakpoint((from: desktop)) {
+    width: 970px;
+  }
+  @include breakpoint((from: big-desktop)) {
+    width: 1170px;
+  }
+}
 .text-center {
   text-align: center;
+}
+
+p {
+  @include font(18px, 1.6);
+  color: #000;
 }
