--- a/drupal/profiles/creative/themes/custom/creative/scss/pages/_user.scss
+++ b/drupal/profiles/creative/themes/custom/creative/scss/pages/_user.scss
@@ -5,7 +5,12 @@
     @include font(18px, 1.6);
     background: $background;
     h3 {
-      margin-bottom: 20px;
+      max-width: 400px;
+      margin: 0 auto 20px;
+      text-align: center;
+      padding: 15px 0;
+      border-bottom: 1px solid #999;
+      border-top: 1px solid #999;
     }
   }
 }
